--- a/Settings/settings.json
+++ b/Settings/settings.json
@@ -2,5 +2,6 @@
     "refresh-interval": 5,
     "dark-mode": 1,
     "eod-summary": 1,
-    "default-sort": "value"
+    "default-sort": "value",
+    "52-week-alert": 1
 }
